author image no longer shown on mobile

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1245,43 +1245,3 @@ textarea.input {
   color: #FFF;
   opacity: 0.9;
 }
-
-/*=========================================================
-	RESPONSIVE
-===========================================================*/
-@media only screen and (max-width: 991px) {
-  #nav .nav-menu {
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 991px) {
-  #nav .nav-buttons {
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 767px) {
-  .page-header h1 {
-    font-size: 28px;
-  }
-  .post.post-row .post-img {
-    width: 100%;
-    float: none;
-  }
-  .post.post-row .post-body {
-    margin-left: 0px;
-  }
-  .post.post-row .post-meta {
-    margin-top: 15px;
-  }
-  .post.post-row .post-body p {
-    display: none;
-  }
-  .sticky-container {
-    padding-left: 0px;
-  }
-  .post-shares {
-    display: none;
-  }
-}
